--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -9,6 +9,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+            python-version: [3.8, 3.9, 3.10.x, 3.11]
+    
     steps:
       - uses: actions/checkout@v3
       - name: install packages
@@ -19,5 +24,3 @@ jobs:
         run: make test
       - name: format
         run: make format
-      - name: deploy
-        run: make deploy
