--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,5 @@ click==8.1.3
 pytest==7.1.3
 pytest-cov==4.0.0
 pylint==2.15.3
-boto3==1.24.87
-#web
-fastapi==0.85.0
-uvicorn==0.18.3
-
-
-
+pandas==2.1.0
+numpy==1.25.2
