--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -50,7 +50,7 @@ jobs:
         id: update_badges
         run: |
           if [ ${{ steps.install.outcome }} == failure ]; then
-            sed -i 's/!\[${{ matrix.python-version }}Install\].*\.svg)/\!\[${{ matrix.python-version }}Install\](https:\/\/img.shields.io\/badge\/Install-Failure-red.svg)/g' README.md
+            sed -i 's/!\[Install\].*\.svg)/\!\[${{ matrix.python-version }}Install\](https:\/\/img.shields.io\/badge\/Install-Failure-red.svg)/g' README.md
           else
             sed -i 's/!\[Install\].*\.svg)/\!\[Install\](https:\/\/img.shields.io\/badge\/Install-Success-green.svg)/g' README.md
           fi
