--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -17,6 +17,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3 
+        with:
+          python-version: ${{ matrix.python-version }} 
+
       - name: Install Packages
         id: install
         run: make install
@@ -43,7 +48,7 @@ jobs:
           if [ ${{ steps.install.outcome }} == failure ]; then
             sed -i 's/!\[Install\].*\.svg)/\!\[${{ matrix.python-version }}Install\](https:\/\/img.shields.io\/badge\/Install-Failure-red.svg)/g' README.md
           else
-            sed -i 's/!\[Install\].*\.svg)/\!\[Install\](https:\/\/img.shields.io\/badge\/Install-Success-green.svg)/g' README.md
+            sed -i 's/!\[Install\].*\.svg)/\!\[${{ matrix.python-version Install\](https:\/\/img.shields.io\/badge\/Install-Success-green.svg)/g' README.md
           fi
           if [ ${{ steps.lint.outcome }} == failure ]; then
             sed -i 's/!\[Lint\].*\.svg)/\!\[Lint\](https:\/\/img.shields.io\/badge\/Lint-Failure-red.svg)/g' README.md
