--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -45,10 +45,13 @@ jobs:
       - name: Update Badges
         id: update_badges
         run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git pull
           if [ ${{ steps.install.outcome }} == failure ]; then
-            sed -i 's/!\[${{ steps.install.outcome }}Install\].*\.svg)/\!\[${{ matrix.python-version }}Install\](https:\/\/img.shields.io\/badge\/Python-${{ steps.install.outcome }}-Install-Failure-red.svg)/g' README.md
+            sed -i 's/!\[${{ matrix.python-version }}Install\].*\.svg)/\!\[${{ matrix.python-version }}Install\](https:\/\/img.shields.io\/badge\/Python-${{ matrix.python-version }}-Install-Failure-red.svg)/g' README.md
           else
-            sed -i 's/!\[${{ steps.install.outcome }}Install\].*\.svg)/\!\[${{ matrix.python-version }}Install\](https:\/\/img.shields.io\/badge\/Python-${{ steps.install.outcome }}-Install-Success-green.svg)/g' README.md
+            sed -i 's/!\[${{ matrix.python-version }}Install\].*\.svg)/\!\[${{ matrix.python-version }}Install\](https:\/\/img.shields.io\/badge\/Python-${{ matrix.python-version }}-Install-Success-green.svg)/g' README.md
           fi
           if [ ${{ steps.lint.outcome }} == failure ]; then
             sed -i 's/!\[Lint\].*\.svg)/\!\[Lint\](https:\/\/img.shields.io\/badge\/Lint-Failure-red.svg)/g' README.md
@@ -65,8 +68,6 @@ jobs:
           else
             sed -i 's/!\[Format\].*\.svg)/\!\[Format\](https:\/\/img.shields.io\/badge\/Format-Success-green.svg)/g' README.md
           fi
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action";
           git add README.md
           git commit -am "Updte README.md"
           git push
